<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orange_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 launch scripts for starting the orange robot</description>
  <maintainer email="shunki.shibuya.5v@stu.hosei.ac.jp">Shibuya</maintainer>
  <maintainer email="koki.kubota.8p@stu.hosei.ac.jp">Kubota</maintainer>
  <maintainer email="kimihiro.mori.4k@stu.hosei.ac.jp">Mori</maintainer>
  <license>Apache-2.0</license>
  <depend>orange_description</depend>
  <depend>rviz2</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-pymodbus</depend>
  <depend>velodyne</depend>
  <depend>urg_node</depend>
  <depend>icm_20948</depend>
  <depend>joint_state_publisher</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
