<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orange_description</name>
  <version>0.0.0</version>
  <description>3D models of the orange robot for ROS2 simulation and visualization</description>
  <maintainer email="shunki.shibuya.5v@stu.hosei.ac.jp">Shibuya</maintainer>
  <maintainer email="koki.kubota.8p@stu.hosei.ac.jp">Kubota</maintainer>
  <maintainer email="kimihiro.mori.4k@stu.hosei.ac.jp">Mori</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>gazebo_plugins</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <depend>orange_sensor_tools</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
