<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orange_navigation</name>
  <version>0.0.0</version>
  <description>ROS2 navigation for the orange robot</description>
  <maintainer email="shunki.shibuya.5v@stu.hosei.ac.jp">Shibuya</maintainer>
  <maintainer email="koki.kubota.8p@stu.hosei.ac.jp">Kubota</maintainer>
  <maintainer email="kimihiro.mori.4k@stu.hosei.ac.jp">Mori</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>orange_description</depend>
  <depend>orange_bringup</depend>
  <depend>nav2_bringup</depend>
  <depend>kbkn_maps</depend>
  <depend>waypoint_navigation</depend>
  <depend>map_changer</depend>
  <depend>fast_lio</depend>
  <depend>fast_odom_convert</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
