<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orange_teleop</name>
  <version>0.0.0</version>
  <description>This project is to use orange robot with ROS2</description>
  <maintainer email="zip@todo.todo">alpaca-zip</maintainer>
  <license>Apache-2.0</license>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>xterm</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>